<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="none"

    app:layout_scrollFlags="scroll">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/citySelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/locationName"
            app:layout_constraintStart_toEndOf="@+id/locationName"
            app:layout_constraintTop_toTopOf="@+id/locationName"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

        <ImageView
            android:id="@+id/filterButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/locationName"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_outline_filter_alt_24" />

        <TextView
            android:id="@+id/locationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="Zihuatanejo, Gro"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageGeo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/locationName"
            app:layout_constraintEnd_toStartOf="@+id/locationName"
            app:srcCompat="@drawable/ic_outline_location_on_24" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/select_category"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/hot_sales"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textTitle"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="@+id/textTitle"
            app:layout_constraintEnd_toEndOf="@+id/filterButton"
            app:layout_constraintTop_toTopOf="@+id/textTitle" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/textView2" />


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="name"
            android:background="@drawable/search_view_drawable"
            app:circularflow_defaultRadius="10dp"
            app:iconifiedByDefault="false"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/textTitle"
            app:layout_constraintTop_toTopOf="@+id/imageButton"
            app:queryBackground="@android:color/transparent"
            app:queryHint="Search"
            app:searchIcon="@drawable/search" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle"
            app:srcCompat="@drawable/ic_qr" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/newItemsCarousel"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/viewpager_corner"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <androidx.cardview.widget.CardView
            android:id="@+id/rcView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newItemsCarousel"
            tools:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                tools:layout_editor_absoluteY="4dp">

                <TextView
                    android:id="@+id/textBestSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/best_seller"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/bsLayout"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/see_more"
                    android:textColor="@color/orange"
                    app:layout_constraintBottom_toBottomOf="@+id/textBestSeller"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bsRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textBestSeller"
                    app:layout_constraintVertical_bias="1.0">

                </androidx.recyclerview.widget.RecyclerView>

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNavigationView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nav_background"
                    android:padding="0dp"
                    app:labelVisibilityMode="labeled"
                    android:foregroundGravity="bottom"
                    app:itemIconTint="@color/white"
                    app:itemTextColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:menu="@menu/bnv_menu" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/filterView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:visibility="gone"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newItemsCarousel"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <Button
                    android:id="@+id/doneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/black_button"
                    android:backgroundTint="@color/orange"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:paddingTop="0dp"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20dp"

                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/exitButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/exitButton" />

                <Button
                    android:id="@+id/exitButton"
                    android:layout_width="40dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@color/black"
                    android:gravity="center_horizontal"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:paddingTop="3dp"
                    android:text="x"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_options"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/doneButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/doneButton" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/brand"
                    app:layout_constraintStart_toStartOf="@+id/exitButton"
                    app:layout_constraintTop_toBottomOf="@+id/exitButton" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/size"
                    app:layout_constraintStart_toStartOf="@+id/exitButton"
                    app:layout_constraintTop_toBottomOf="@+id/cardView5" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/price"
                    app:layout_constraintStart_toStartOf="@+id/exitButton"
                    app:layout_constraintTop_toBottomOf="@+id/cardView4" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="@+id/doneButton"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:strokeColor="@color/border_gray"
                    app:strokeWidth="1dp">

                    <Spinner
                        android:id="@+id/brandSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/spinner_icon" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView44"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/doneButton"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@id/textView11"
                    app:strokeColor="@color/border_gray"
                    app:strokeWidth="1dp">


                    <Spinner
                        android:id="@+id/sizeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/spinner_icon" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    app:cardElevation="0dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/border_gray"
                    app:cardCornerRadius="2dp"
                    android:id="@+id/cardView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/cardView4"
                    app:layout_constraintStart_toStartOf="@+id/cardView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView10">

                    <Spinner
                        android:id="@+id/spinnerPrice"
                        android:background="@drawable/spinner_icon"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcCategory"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textTitle"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>